src/objects/CRM_settings__c.object
<CustomObject>
    <fields>
        <fullName>Bar_color__c</fullName>
        <defaultValue>&quot;#FF9933,#A700DF,#369E2B&quot;</defaultValue>
        <inlineHelpText>Give the web color for each type in the CRM chart 
separated with comma. 
eg. #1223344,#112244,#335566</inlineHelpText>
        <label>Bar color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_performance_type__c</fullName>
        <label>CRM performance type</label>
        <picklist>
            <picklistValues>
                <fullName>Performance, general</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Performance, project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance, marketing activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Milestone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance, costcenter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Chart__c</fullName>
        <label>Chart</label>
        <picklist>
            <picklistValues>
                <fullName>Area charts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bar charts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Line charts</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Spline charts</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expression_business_area__c</fullName>
        <inlineHelpText>Here you can enter which campaign to be included for the selected milestone, one row for each campaign</inlineHelpText>
        <label>Campaign</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expression_business_region__c</fullName>
        <inlineHelpText>Here you can enter which lead source to be included for the selected milestone, one row for each source</inlineHelpText>
        <label>Lead Source</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Selector__c</fullName>
        <label>Selector</label>
        <picklist>
            <picklistValues>
                <fullName>Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Source</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Watch_type__c</fullName>
        <inlineHelpText>For milestone you can only choice one option</inlineHelpText>
        <label>Watch type</label>
        <picklist>
            <picklistValues>
                <fullName>No Leads</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No Opportunities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Wins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amount Opportunities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amount (weighted) Opportunities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amount Wins</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>CRM settings</label>
    <nameField>
        <label>Settings Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01Ib0000000kPblEAE_00Nb0000009ydBiEAI</fullName>
        <active>true</active>
        <field>Milestone__c.Target_CRM_settings__c</field>
        <filterItems>
            <field>CRM_settings__c.CRM_performance_type__c</field>
            <operation>equals</operation>
            <value>Milestone</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>nf_01Ib0000001Hpy3EAC_00Nb000000AC36NEAT</name>
    </namedFilters>
    <pluralLabel>CRM settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>